<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityStyle"
    tools:context="com.example.sally.rxjavakotlin.ui.details.DetailsActivity">

    <LinearLayout
        android:id="@+id/rl_item_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_item_margin"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="@dimen/default_item_padding">

        <TextView
            android:id="@+id/tv_repository_details"
            style="@style/TextAppearance.Size18.red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository_details" />

        <!-- Repository Name -->
        <TextView
            style="@style/TextAppearance.Size14.black.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository_name" />

        <TextView
            android:id="@+id/tv_repository_name_details"
            style="@style/TextAppearance.Size14.black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Repository Description -->
        <TextView
            style="@style/TextAppearance.Size14.black.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository_description" />

        <TextView
            android:id="@+id/tv_repository_description_details"
            style="@style/TextAppearance.Size14.black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Repository programming language -->
        <TextView
            style="@style/TextAppearance.Size14.black.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programming_language" />

        <TextView
            android:id="@+id/tv_repository_language"
            style="@style/TextAppearance.Size14.black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Repository fork -->
        <TextView
            style="@style/TextAppearance.Size14.black.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_fork" />

        <TextView
            android:id="@+id/tv_repository_fork"
            style="@style/TextAppearance.Size14.black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Repository Update time -->
        <TextView
            style="@style/TextAppearance.Size14.black.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_time_updated" />

        <TextView
            android:id="@+id/tv_repository_updated_time"
            style="@style/TextAppearance.Size14.black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Owner Details -->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_item_margin"
            android:background="@color/red_owner_bg"
            android:padding="@dimen/default_item_padding">

            <TextView
                android:id="@+id/tv_owner_details"
                style="@style/TextAppearance.Size18.red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/repository_owner_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/iv_owner_avatar"
                android:layout_width="@dimen/owner_avatar_width"
                android:layout_height="@dimen/owner_avatar_height"
                android:layout_below="@+id/tv_owner_details"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_owner_details" />

            <TextView
                android:id="@+id/tv_owner_name"
                style="@style/TextAppearance.Size14.black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_owner_avatar"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/iv_owner_avatar"
                android:layout_toRightOf="@+id/iv_owner_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_owner_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_owner_details"
                tools:text="Owner name" />

            <TextView
                android:id="@+id/tv_owner_blog"
                style="@style/TextAppearance.Size14.blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_owner_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_owner_name"
                tools:text="Owner blog" />

            <TextView
                android:id="@+id/tv_owner_email"
                style="@style/TextAppearance.Size12.blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                tools:text="Owner email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_owner_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_owner_blog" />

            <TextView
                android:id="@+id/tv_empty_data"
                style="@style/TextAppearance.Size14.black.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_owner_details"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/no_data_available"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="No data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_owner_details" />


            <ProgressBar
                android:id="@+id/pb_owner_data"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_owner_details"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>